--- a/templates/users/password_change_form.html
+++ b/templates/users/password_change_form.html
@@ -5,7 +5,7 @@
 {% block title %}Изменить пароль{% endblock %}
 
 {% block content %}
-  <main class="form" style="margin-top: 7%">
+  <main class="form password-change">
 
     {% if form.errors %}
       <script>
@@ -15,9 +15,9 @@
       </script>
     {% endif %}
 
-    <div class="form-wrapper bg-dark" style="width: 320px">
+    <div class="form-wrapper bg-dark">
 
-      <form style="padding: 20px;" method="post">
+      <form method="post">
         {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">{% translate 'Change password' %}</h1>
 
