--- a/templates/users/password_reset_form.html
+++ b/templates/users/password_reset_form.html
@@ -3,7 +3,7 @@
 {% load i18n static %}
 {% block title %}Восстановить пароль{% endblock %}
 {% block content %}
-  <main class="form" style="margin-top: 7%">
+  <main class="form password-change">
 
     {% if form.errors %}
       <script>
@@ -13,9 +13,9 @@
       </script>
     {% endif %}
 
-    <div class="form-wrapper bg-dark" style="width: 320px">
+    <div class="form-wrapper bg-dark">
 
-      <form style="padding: 20px;" method="post">
+      <form method="post">
         {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">{% translate 'Password reset' %}</h1>
 
