--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -5,7 +5,7 @@
 {% block content %}
   {% if validlink %}
 
-    <main class="form" style="margin-top: 7%">
+    <main class="form password-change">
 
       {% if form.errors %}
         <script>
@@ -16,14 +16,13 @@
         </script>
       {% endif %}
 
-      <div class="form-wrapper bg-dark" style="width: 320px">
+      <div class="form-wrapper bg-dark">
 
-        <form style="padding: 20px;" method="post">
+        <form method="post">
           {% csrf_token %}
           <h1 class="h3 mb-3 fw-normal">{% translate 'Change password' %}</h1>
 
-          <input class="hidden" autocomplete="username" style="hidden: 1"
-                 value="{{ form.user.get_username }}" id="username">
+          <input class="hidden" autocomplete="username" style="hidden: 1" value="{{ form.user.get_username }}" id="username">
 
           <div class="form-floating ">
             {% if form.new_password1.help_text %}
