--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -10,7 +10,7 @@
   <main class="form">
     <div class="form-wrapper bg-dark">
 
-      <form style="padding: 20px;" method="post">
+      <form method="post">
         {% csrf_token %}
 
         <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
@@ -49,7 +49,6 @@
         <div class="sign-link-wrapper">
           <a href="{% url 'login' %}" class="sign-link">Уже есть аккаунт ?</a>
         </div>
-        <p class="mt-5 mb-3 text-muted label-text">© 2022</p>
       </form>
     </div>
   </main>
