--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,6 +57,11 @@ body {
     border-radius: 5px;
 }
 
+.col:hover a .avatar {
+
+    filter: drop-shadow(0 0 5px #ffffff);
+}
+
 .img-wrapper img {
     display: block;
     margin: auto;
