--- a/templates/base.html
+++ b/templates/base.html
@@ -9,25 +9,26 @@
         rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href={% static "css/base.css" %}>
   {% block styles %}{% endblock %}
   <title>{% block title %}Стандартный заголовок{% endblock %}</title>
   {% include 'includes/favicon.html' %}
 </head>
-<body class="bg-dark text-white" style="--bs-bg-opacity: 0.9;">
-{% block header %}{% include "includes/header.html" %}{% endblock %}
+<body>
 
-<div class="container">
+<div class="container ">
+
+  {% block header %}{% include "includes/header.html" %}{% endblock %}
+
   <div class="container-wrapper">
 
-    <main class="content">
+    <main class="content bg-light" style="max-width: 1296px">
       {% block content %}Стандартный контент{% endblock %}
     </main>
 
   </div>
+  {% block footer %} {% include "includes/footer.html" %}{% endblock %}
 
 </div>
-{% block footer %} {% include "includes/footer.html" %}{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
