--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href={% static "css/base.css" %}>
+
   {% block styles %}{% endblock %}
+  {% block scripts %}{% endblock %}
+
   <title>{% block title %}Стандартный заголовок{% endblock %}</title>
   {% include 'includes/favicon.html' %}
 </head>
