--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -58,6 +58,11 @@
     padding: 0;
     margin-top: 10px;
     cursor: pointer;
+
+}
+
+.edit a {
+    text-decoration: none !important;
 }
 
 .edit:hover {
