--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -15,13 +15,10 @@
         </li>
         {% if user.is_authenticated %}
           <li>
-            <a class="nav-link px-2 text-white" href="{% url 'profile' %}">Profile</a>
+            <a class="nav-link px-2 text-white" href="{% url 'user_detail' user.id %}">Profile</a>
           </li>
           <li>
             <a class="nav-link px-2 text-white" href="#">Messages</a>
-          </li>
-          <li>
-            <a class="nav-link px-2 text-white" href="#">Followers</a>
           </li>
         {% endif %}
 
