--- a/templates/includes/user_card.html
+++ b/templates/includes/user_card.html
@@ -1,11 +1,7 @@
-<div class="col"
-     style="border: none; padding: 0; min-width: 30%;
-         max-width: 30%;margin: 30px 0 0 0; cursor: pointer">
-  <a href="{% url 'user_detail' user.id %}"
-     style="text-decoration: none; color: #fff">
-    <div class="card shadow-sm" style="border-radius: 10px;">
-      <div class="card-body bg-dark text-white"
-           style="border-radius: 10px;">
+<div class="col col-card">
+  <a href="{% url 'user_detail' user.id %}">
+    <div class="card shadow-sm">
+      <div class="card-body bg-dark text-white">
         <div class="img-wrapper">{{ user.get_photo }}</div>
         <p class="card-text">
           Username:
