--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -29,12 +29,12 @@
         {{ form.photo }}
       </div>
 
-      <div class="form-floating ">
-        {{ form.role }}
-      </div>
+{#      <div class="form-floating ">#}
+{#        {{ form.role }}#}
+{#      </div>#}
 
       <button class="w-100 btn btn-lg btn-primary margin-top" type="submit">
-        {% if already_follow %}Отписаться{% else %}Подписаться{% endif %}
+        Обновить
       </button>
     </form>
   </div>
