--- a/templates/users/user_detail.html
+++ b/templates/users/user_detail.html
@@ -11,9 +11,9 @@
   <div class="col col-profile">
     <div class="profile widget">
       {{ user.get_photo }}
-      {% if current_user is user.id %}
+      {% if current_user.id is user.id %}
         <button class="edit">Редактировать</button>
-      {% else %}
+      {% elif current_user.role != user.role %}
         <form method="post">
           {% csrf_token %}
           <button class="edit" type="submit">
@@ -54,4 +54,43 @@
       </div>
     </div>
   </div>
+
+  <div class="data">
+    <div class="widget">
+  {% if all_ratings.star__avg %}
+      <span class="text-muted">
+          Средняя оценка: 
+      </span>
+      <span class='badge bg-warning'>{{all_ratings.star__avg}}</span></br>
+          <span class="text-muted">
+              Всего оценок: 
+          </span>
+      <span class='badge bg-success'>{{all_ratings.star__count}}</span>
+      {% else %} <span class="text-muted">
+          Пока нет ни одной оценки :(
+      </span>
+      {% endif %}
+    </div>
+  </div>
+            
+  {% if not current_user is user.id and current_user.role != user.role %}
+  <div class="data">
+    <div class="widget">
+      {% if already_follow %}
+      {% if rating %}
+      <h3>Ваша оценка: {{rating}}</h3>
+      {% endif %}
+      <form method="post">
+        {% csrf_token %}
+        {{rating_form.as_p}}
+        <button class="edit" type="submit">
+          Оценить
+        </button>
+      {% else %} <p>Оценку ставить могут только подписчики</p>
+      {% endif %}
+      </form>
+    </div>
+  </div>
+  {% endif %}
+  
 {% endblock %}
