--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,27 +3,18 @@
     justify-content: space-between;
 }
 
-header {
-    height: 60px;
-    --bs-bg-opacity: .7 !important;
-}
 
 footer {
     height: 60px;
     --bs-bg-opacity: .7 !important;
     margin-top: 0 !important;
-
+    
 }
 
 body {
     --bs-bg-opacity: .7 !important;
 }
 
-.nav-link:hover {
-    color: #fff;
-    text-decoration: none;
-    filter: drop-shadow(0 0 5px #ffffff);
-}
 
 .card-row {
     padding: 50px 20px;
@@ -58,7 +49,7 @@ body {
 }
 
 .col:hover a .avatar {
-
+    
     filter: drop-shadow(0 0 5px #ffffff);
 }
 
@@ -69,4 +60,39 @@ body {
 
 .card-text {
     border-top: 1px solid #CCC; padding-top: 5px; margin-top: 10px;
+}
+
+/* Header */
+
+header {
+    /* height: 60px; */
+    --bs-bg-opacity: .7 !important;
+}
+
+header .form-control-dark {
+    color: #fff;
+    background-color: var(--bs-dark);
+    border-color: var(--bs-gray);
+}
+
+header .form-control-dark:focus {
+    color: #fff;
+    background-color: var(--bs-dark);
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+}
+
+header .bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+}
+
+header .bi::before {
+    font-size: 2rem;
+}
+
+.nav-link:hover {
+    color: #fff;
+    text-decoration: none;
+    filter: drop-shadow(0 0 5px #ffffff);
 }
