--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href={% static "css/base.css" %}>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   {% block styles %}{% endblock %}
   <title>{% block title %}Стандартный заголовок{% endblock %}</title>
   {% include 'includes/favicon.html' %}
