--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,61 +1,39 @@
 {% load static %}
-<header class="bg-dark text-white">
-  <div class="container">
-    <div class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar">
-      <a href="/"
-         class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img"
-             aria-label="Bootstrap">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-      </a>
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-        <li>
-          <a class="nav-link px-2 text-white" href="{% url 'users' %}">Users</a>
-        </li>
+
+<header class="bg-dark text-white p-3">
+<div class="container">
+<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <i class="bi bi-house-heart-fill" title="Домой"></i>
+    </a>
+
+    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a class="nav-link px-2 text-white" href="{% url 'users' %}">Пользователи</a></li>
+        
         {% if user.is_authenticated %}
-          <li>
-            <a class="nav-link px-2 text-white" href="{% url 'profile' %}">Profile</a>
-          </li>
-          <li>
-            <a class="nav-link px-2 text-white" href="#">Messages</a>
-          </li>
-          <li>
-            <a class="nav-link px-2 text-white" href="#">Followers</a>
-          </li>
+            <li><a class="nav-link px-2 text-white" href="{% url 'profile' %}">Профиль</a></li>
+            <li><a class="nav-link px-2 text-white" href="#">Сообщения</a></li>
+            <li><a class="nav-link px-2 text-white" href="#">Подписчики</a></li>
         {% endif %}
 
         {% if request.user.is_superuser %}
-          <li>
-            <a href="{% url 'admin:index' %}"
-               class="nav-link px-2 text-white ">Админка</a>
-          </li>
+            <li><a href="{% url 'admin:index' %}" class="nav-link px-2 text-white ">Админка</a></li>
         {% endif %}
-      </ul>
+    </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-        <input type="search" class="form-control form-control-dark"
-               placeholder="Введите текст..." aria-label="Search">
-      </form>
+    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+        <input type="search" class="form-control form-control-dark" placeholder="Введите текст..." aria-label="Введите текст">
+    </form>
 
-      <div class="text-end">
+    <div class="text-end">
         {% if user.is_authenticated %}
-          <a href="{% url 'logout' %}"
-             class="btn btn-outline-light me-2">Logout</a>
+            <a href="{% url 'logout' %}" class="btn btn-outline-danger me-2">Выход</a>
         {% else %}
-          <a href="{% url 'login' %}"
-             class="btn btn-outline-light me-2">Login</a>
+            <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Вход</a>
+            <a href="{% url 'signup' %}" class="btn btn-warning">Регистрация</a>
         {% endif %}
-        <a href="{% url 'signup' %}" class="btn btn-warning">Sign-up</a>
-      </div>
+        
     </div>
-  </div>
-  {% if birthday_list %}
-
-    <marquee scrollamount='7'>Наши именинники:
-      {% for birthday in birthday_list %}
-        <a class="text-white" href="{% url 'user_detail' birthday.user.id %}">{{ birthday.user.username }}</a>
-      {% endfor %}
-    </marquee>
-  {% endif %}
+</div>
+</div>
 </header>
