--- a/templates/graphics/view_timeline.html
+++ b/templates/graphics/view_timeline.html
@@ -1,1 +1,31 @@
 {% extends 'base.html' %} 
+{% load static %}
+
+{% block title %}{{ object }}{% endblock title %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/form_grid.css' %}">
+{% endblock styles %}
+
+{% block content %}
+<div class="overflow-auto my-4">
+<table>
+    <thead>
+        <tr>
+            {% for header in headers %}
+                <td>{{ header }}</td>
+            {% endfor %}
+        </tr>
+    </thead>
+    <tbody>
+        {% for row in table_data %}
+            <tr>
+                {% for col in row %}
+                    <td class="{{ col.class }}">{{ col.value }}</td>
+                {% endfor %}
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+</div>
+{% endblock content %}
