--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,6 +1,7 @@
 .data {
     min-width: 220px;
     max-width: 530px;
+    margin-left: max(100% - 750px, 0px);
 }
 
 .name {
@@ -16,7 +17,6 @@
     padding: 10px 0;
     display: flex;
     width: 100%;
-    justify-content: space-between;
 }
 
 .info_item {
@@ -118,5 +118,5 @@ h6 {
 }
 
 .content {
-    max-width: 470px;
+    max-width: 760px;
 }
