--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -13,7 +13,7 @@
         {% if user.is_authenticated %}
           <li><a class="nav-link px-2 text-white" href="{% url 'user_detail' user.id %}">Профиль</a></li>
           <li><a class="nav-link px-2 text-white" href="#">Сообщения</a></li>
-          <li><a class="nav-link px-2 text-white" href="#">Подписчики</a></li>
+          <li><a class="nav-link px-2 text-white" href="{% url 'user_detail_follows' user.id %}">Подписчики</a></li>
         {% endif %}
 
         {% if request.user.is_superuser %}
