--- a/static/css/form_grid.css
+++ b/static/css/form_grid.css
@@ -13,7 +13,7 @@
 }
 
 .form-grid-body > * > label {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .form-grid-body li {
@@ -34,11 +34,10 @@ input[type="submit"] {
 
 table {
     width: 100%;
-    background-color: rgba(var(--bs-dark-rgb), .5);
 }
 
 .big-tl-table th {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 1.5rem;
     text-align: center;
 }
@@ -49,12 +48,12 @@ table td {
 
 .busy-hour {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-danger-rgb),var(--bs-bg-opacity))!important;
+    background-color: rgba(var(--bs-danger-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .vacant-hour {
     --bs-bg-opacity: .7;
-    background-color: rgba(var(--bs-success-rgb),var(--bs-bg-opacity))!important;
+    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .vacant-hour::before {
@@ -70,20 +69,37 @@ table td {
     display: inline-block;
     font-family: bootstrap-icons !important;
     font-style: normal;
-    font-weight: normal !important;
+    font-weight: 500 !important;
     font-variant: normal;
     text-transform: none;
     line-height: 1;
     vertical-align: -0.125em;
     -webkit-font-smoothing: antialiased;
     font-size: .8rem;
-    padding-right: .2rem;
+    padding-right: 0;
+}
+
+.table-header {
+    font-size: 12px;
+    min-width: 50px;
 }
 
 th {
     letter-spacing: 2px;
+    font-weight: 500;
+    text-align: center;
+    min-width: 130px;
+    font-size: 14px;
 }
-  
+
+th:hover {
+    filter: drop-shadow(0 0 5px #ffffff);
+}
+
+tbody tr:hover th {
+    filter: drop-shadow(0 0 5px #ffffff);
+}
+
 td {
     letter-spacing: 1px;
 }
@@ -96,4 +112,8 @@ td:not(:last-child) {
 
 table tr:not(:last-child) td {
     border-bottom: solid 2px rgba(var(--bs-dark-rgb), .5);
+}
+
+.small-tl-table {
+    margin: 5px 0;
 }
