--- a/static/css/base.css
+++ b/static/css/base.css
@@ -136,3 +136,9 @@ header .bi::before {
     text-decoration: none;
     filter: drop-shadow(0 0 5px #ffffff);
 }
+
+.bunch-choices {
+    margin-bottom: 10px;
+    padding: 0 0 0 20px !important;
+    height: 48px !important;
+}
