update: edit templates (quotation marks)

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   {% block scripts %}{% endblock %}
 
   <title>{% block title %}Стандартный заголовок{% endblock %}</title>
-  {% include 'includes/favicon.html' %}
+  {% include "includes/favicon.html" %}
 </head>
 <body class="bg-dark text-white" style="--bs-bg-opacity: 0.9;">
 {% block header %}{% include "includes/header.html" %}{% endblock %}
