--- a/templates/form_base.html
+++ b/templates/form_base.html
@@ -13,7 +13,7 @@
 
   {% block scripts %}{% endblock %}
 
-  {% include 'includes/favicon.html' %}
+  {% include "includes/favicon.html" %}
   <title>{% block title %}Регистрация{% endblock %}</title>
 </head>
 <body class="bg-dark text-white" style="--bs-bg-opacity: 0.9;">
