--- a/templates/graphics/edit_template.html
+++ b/templates/graphics/edit_template.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% load static %}
 
 {% block title %}Редактировать расписание{% endblock title %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/form_grid.css' %}">
+    <link rel="stylesheet" href="{% static "css/form_grid.css" %}">
 {% endblock styles %}
 
 {% block content %}
