--- a/templates/graphics/view_timeline.html
+++ b/templates/graphics/view_timeline.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %} 
+{% extends "base.html" %} 
 {% load static %}
 
 {% block title %}{{ object }}{% endblock title %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/form_grid.css' %}">
+    <link rel="stylesheet" href="{% static "css/form_grid.css" %}">
 {% endblock styles %}
 
 {% block content %}
