--- a/templates/includes/user_card.html
+++ b/templates/includes/user_card.html
@@ -1,5 +1,5 @@
 <div class="col col-card">
-  <a href="{% url 'user_detail' user.id %}">
+  <a href="{% url "user_detail" user.id %}">
     <div class="card shadow-sm">
       <div class="card-body bg-dark text-white">
         <div class="img-wrapper">{{ user.get_photo }}</div>
