--- a/templates/users/password_change_done.html
+++ b/templates/users/password_change_done.html
@@ -5,7 +5,7 @@
 {% block title %}Успешно{% endblock %}
 
 {% block content %}
-  <p>{% translate 'Your password was changed.' %}</p>
-  <a href="{% url 'profile' %}"
+  <p>{% translate "Your password was changed." %}</p>
+  <a href="{% url "profile" %}"
      class="btn btn-outline-light me-2">Me</a>
 {% endblock %}
