--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -11,8 +11,8 @@
         <script>
 
             {% if form.errors.items|length == 1 %}
-                alert('{% translate "Please correct the error below." %}){% else %}
-                alert('{% translate "Please correct the errors below." %}){% endif %}
+                alert("{% translate "Please correct the error below." %}){% else %}
+                alert("{% translate "Please correct the errors below." %}){% endif %}
         </script>
       {% endif %}
 
@@ -20,9 +20,10 @@
 
         <form method="post">
           {% csrf_token %}
-          <h1 class="h3 mb-3 fw-normal">{% translate 'Change password' %}</h1>
+          <h1 class="h3 mb-3 fw-normal">{% translate "Change password" %}</h1>
 
-          <input class="hidden" autocomplete="username" style="hidden: 1" value="{{ form.user.get_username }}" id="username">
+          <input class="hidden" autocomplete="username" style="hidden: 1" value="{{ form.user.get_username }}"
+                 id="username">
 
           <div class="form-floating ">
             {% if form.new_password1.help_text %}
@@ -40,18 +41,18 @@
             {{ form.new_password2 }}
           </div>
 
-          <input type="submit" value="{% translate 'Change my password' %}"
+          <input type="submit" value="{% translate "Change my password" %}"
                  class="w-100 btn btn-lg btn-primary" id="submit">
 
         </form>
       </div>
-    <script>
-      document.getElementById('username').hidden = true;
-    </script>
+      <script>
+          document.getElementById("username").hidden = true;
+      </script>
     </main>
-{% else %}
+  {% else %}
 
-<p>{% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
+    <p>{% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
 
   {% endif %}
 
