--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-  <main class="form" >
+  <main class="form">
     <div class="form-wrapper bg-dark">
 
       <form method="post" enctype="multipart/form-data">
@@ -47,7 +47,7 @@
         <div class="w-100 btn btn-lg btn-primary" id="submit">Зарегистрироваться
         </div>
         <div class="sign-link-wrapper">
-          <a href="{% url 'login' %}" class="sign-link">Уже есть аккаунт ?</a>
+          <a href="{% url "login" %}" class="sign-link">Уже есть аккаунт ?</a>
         </div>
       </form>
     </div>
