--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href={% static "css/base_form.css" %}>
   <link rel="stylesheet" type="text/css" href={% static "css/profile.css" %}>{% endblock %}
 {% block scripts %}
-  <script src="{% static 'js/edit_profile.js' %}" type="text/javascript"></script>
+  <script src="{% static "js/edit_profile.js" %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
@@ -29,9 +29,9 @@
         {{ form.photo }}
       </div>
 
-{#      <div class="form-floating ">#}
-{#        {{ form.role }}#}
-{#      </div>#}
+      {#      <div class="form-floating ">#}
+      {#        {{ form.role }}#}
+      {#      </div>#}
 
       <button class="w-100 btn btn-lg btn-primary margin-top" type="submit">
         Обновить
