--- a/templates/users/login_with_username.html
+++ b/templates/users/login_with_username.html
@@ -4,50 +4,50 @@
 {% block title %}Вход{% endblock %}
 
 {% block content %}
-<main class="form">
+  <main class="form">
 
-  {% if form.errors %}
-    {% for field in form %}
-      {% for error in field.errors %}
+    {% if form.errors %}
+      {% for field in form %}
+        {% for error in field.errors %}
+          <script type="text/javascript">
+              alert("{{ error|escape }}")
+          </script>
+        {% endfor %}
+      {% endfor %}
+      {% for error in form.non_field_errors %}
         <script type="text/javascript">
-            alert('{{ error|escape }}')
+            alert("{{ error|escape }}")
         </script>
       {% endfor %}
-    {% endfor %}
-    {% for error in form.non_field_errors %}
-      <script type="text/javascript">
-          alert('{{ error|escape }}')
-      </script>
-    {% endfor %}
-  {% endif %}
+    {% endif %}
 
-  <div class="form-wrapper bg-dark">
+    <div class="form-wrapper bg-dark">
 
-    <form style="padding: 20px;" method="post">
-      {% csrf_token %}
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <form style="padding: 20px;" method="post">
+        {% csrf_token %}
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-      <div class="form-floating ">
-        {{ form.username }}
-      </div>
-      <div class="form-floating">
-        {{ form.password }}
-      </div>
+        <div class="form-floating ">
+          {{ form.username }}
+        </div>
+        <div class="form-floating">
+          {{ form.password }}
+        </div>
 
-      <div class="checkbox mb-3">
-        <input type="checkbox" value="remember-me"> Remember me
-      </div>
+        <div class="checkbox mb-3">
+          <input type="checkbox" value="remember-me"> Remember me
+        </div>
 
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in
-      </button>
-      <div class="sign-link-wrapper">
-        <a href="{% url 'signup' %}" class="sign-link">Don't you
-          have an account yet ?</a>
-        <a href="{% url 'password_reset' %}" class="sign-link">Forgot your password ?</a>
-      </div>
-      <p class="mt-5 mb-3 text-muted label-text">© 2017–2022</p>
-    </form>
-  </div>
-</main>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in
+        </button>
+        <div class="sign-link-wrapper">
+          <a href="{% url "signup" %}" class="sign-link">Don"t you
+            have an account yet ?</a>
+          <a href="{% url "password_reset" %}" class="sign-link">Forgot your password ?</a>
+        </div>
+        <p class="mt-5 mb-3 text-muted label-text">© 2017–2022</p>
+      </form>
+    </div>
+  </main>
 
 {% endblock %}
