--- a/templates/users/password_change_form.html
+++ b/templates/users/password_change_form.html
@@ -10,8 +10,8 @@
     {% if form.errors %}
       <script>
           {% if form.errors.items|length == 1 %}
-              alert('{% translate "Please correct the error below." %}){% else %}
-              alert('{% translate "Please correct the errors below." %}){% endif %}
+              alert("{% translate "Please correct the error below." %}){% else %}
+              alert("{% translate "Please correct the errors below." %}){% endif %}
       </script>
     {% endif %}
 
@@ -19,7 +19,7 @@
 
       <form method="post">
         {% csrf_token %}
-        <h1 class="h3 mb-3 fw-normal">{% translate 'Change password' %}</h1>
+        <h1 class="h3 mb-3 fw-normal">{% translate "Change password" %}</h1>
 
         <div class="form-floating ">
           {{ form.old_password.errors }}
@@ -45,7 +45,7 @@
           {% endif %}
         </div>
 
-        <input type="submit" value="{% translate 'Change my password' %}"
+        <input type="submit" value="{% translate "Change my password" %}"
                class="w-100 btn btn-lg btn-primary" id="submit">
 
       </form>
