--- a/templates/users/password_reset_form.html
+++ b/templates/users/password_reset_form.html
@@ -8,8 +8,8 @@
     {% if form.errors %}
       <script>
           {% if form.errors.items|length == 1 %}
-              alert('{% translate "Please correct the error below." %}){% else %}
-              alert('{% translate "Please correct the errors below." %}){% endif %}
+              alert("{% translate "Please correct the error below." %}){% else %}
+              alert("{% translate "Please correct the errors below." %}){% endif %}
       </script>
     {% endif %}
 
@@ -17,7 +17,7 @@
 
       <form method="post">
         {% csrf_token %}
-        <h1 class="h3 mb-3 fw-normal">{% translate 'Password reset' %}</h1>
+        <h1 class="h3 mb-3 fw-normal">{% translate "Password reset" %}</h1>
 
         <div class="form-floating ">
           {{ form.email.errors }}
@@ -28,7 +28,7 @@
           {{ form.email }}
         </div>
 
-        <input type="submit" value="{% translate 'Reset my password' %}"
+        <input type="submit" value="{% translate "Reset my password" %}"
                class="w-100 btn btn-lg btn-primary" id="submit">
 
       </form>
