--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-dark text-white" style="--bs-bg-opacity: 0.9;">
 {% block header %}{% include "includes/header.html" %}{% endblock %}
-
+{% block messages %}{% include "includes/messages.html" %}{% endblock %}
 <div class="container">
   <div class="container-wrapper">
 
