--- a/templates/form_base.html
+++ b/templates/form_base.html
@@ -17,10 +17,7 @@
   <title>{% block title %}Регистрация{% endblock %}</title>
 </head>
 <body class="bg-dark text-white" style="--bs-bg-opacity: 0.9;">
-{% if errors %}
-  <div> {{ errors }}</div>
-{% endif %}
-
+{% block messages %}{% include "includes/messages.html" %}{% endblock %}
 {% block content %}
 {% endblock %}
 
