--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block scripts %}
-  <script src="../../static/js/signup.js" type="text/javascript"></script>
+  <script src="{%  static "/js/signup.js" %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
