--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -8,6 +8,9 @@
     min-height: calc(100vh - 230px);
 }
 
+.img-wrapper {
+}
+
 .input-box {
     display: flex;
     justify-content: space-between;
@@ -53,7 +56,7 @@
 
 .message {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .message-text {
@@ -63,4 +66,12 @@
 .message-text span {
     font-size: 14px;
     text-align: left;
+    display: inline;
+}
+.message-time {
+    color: #999999;
+}
+
+.text-value {
+    color: #cccccc;
 }
