--- a/templates/chats/chats.html
+++ b/templates/chats/chats.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Мой профиль{% endblock %}
 {% block scripts %}
-  <script src="{%  static "/js/send_message.js" %}" type="text/javascript"></script>
+  <script src="{% static "/js/send_message.js" %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block styles %}
@@ -20,8 +20,13 @@
               <div class="img-wrapper">{{ message.owner.photo_tmb }}</div>
             </a>
             <div class="message-text">
-              <a href="{% url "user_detail" message.owner.id %}"> <span class="friend_name">{{ message.owner.first_name }}</span></a>
-              <span>{{ message.text }}</span>
+
+              <div>
+                <a href="{% url "user_detail" message.owner.id %}"><span class="friend_name">{{ message.owner.first_name }}</span></a>
+                <span class="message-time">{{ message.time }}</span>
+              </div>
+
+              <div><span class="text-value">{{ message.text }}</span></div>
             </div>
 
           </div>
