--- a/templates/notifications/view_notifications.html
+++ b/templates/notifications/view_notifications.html
@@ -13,7 +13,7 @@
     <div class="card bg-dark my-3" style="--bs-bg-opacity: .5">
         <div class="card-body">
             <h4 class="card-title fs-5">{{ obj.category|capfirst }}</h4>
-            <h5 class="card-subtitle fs-6 mb-2 text-muted">{{ obj.creation|date:"d E Y" }}</h5>
+            <h5 class="card-subtitle fs-6 mb-2 text-muted">{{ obj.last_modified|date:"d E Y" }}</h5>
             <p class="card-text">{{ obj.message }}</p>
             {% if obj.initiator %}
                 <a href="{{ obj.initiator.get_absolute_url }}" class="card-link link-light">{{ obj.initiator }}</a>
